updates to profile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="lead">
         <div id="lead-content">
             <h1>Isaac McKillen-Godfried</h1>
-            <h2>Software Engineer and Data Scientist</h2>
+            <h2>Data and Machine Learning Engineer</h2>
             <a href="resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -121,20 +121,23 @@ Includes detailed information about all my recent projects and interests."/>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Data Science, Data Engineering, and Machine Learning. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm looking for opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
                         <b> Primary Areas of Research/Specialities</b>
                         <ul>
                             <li>Transfer and multitask learning</li>
                             <li>Deployment of deep learning models to production</li>
                             <li> Stream processing and realtime analytics</li>
+                            <li> Natural Language Processing </li>
                           </ul>
 
                         <br></br>
                         <b> Background </b>
                         <br></br>
 
-                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year of college, to large-scale data processing with Spark and Hadoop begining in 2017, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. More recently, I have worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
-                        data engineering types tasks like building a Python pipeline to bring together the hospital's diverse data sources, to machine learning and analytics tasks such as researching RNNs for forecasting length of stay and creating interactive visualizations for physicians and administrators.
+                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year of college, to large-scale data processing with Spark and Hadoop begining in 2017, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. 
+                        <br></br>
+                        From 2017-2018 I worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
+                        data engineering types tasks like building a Python pipeline to bring together the hospital's diverse data sources, to machine learning and analytics tasks such as researching RNNs for forecasting length of stay and creating interactive visualizations for physicians and administrators. Most recently, I develop data pipelines and machine learning models for Hudson Bay Company (HBC). The pipelines are generally made with a combination of Spark, Airflow, and deployed on Kubernetes. I have also aided in the development of several machine learning models using SparkML and Tensorflow to address business operations such as forecasting retail demand as well as customer personalization. 
                         </p>
 
 
@@ -309,7 +312,7 @@ Includes detailed information about all my recent projects and interests."/>
     <!-- End #education -->
     <div id="projects" class="background-alt">
       <div id="writing"> </div>
-      <h2 class="heading"> Writing </h2>
+      <h2 class="heading"> Writing and Presentations </h2>
       <div class="container" style="width:85%; background-color:white;" >
         <h3> Blog posts </h3>
         <ul style="vertical-align:middle; margin: 15px 14px; list-style-type: none;">
@@ -444,34 +447,43 @@ Includes detailed information about all my recent projects and interests."/>
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Primary Skills</h2>
         <ul>
             <li>Python</li>
+            <li>PyTorch</li>
             <li>Pandas</li>
             <li>Keras</li>
-            <li>PyTorch</li>
             <li>Bokeh</li>
             <li>NumPy</li>
             <li>Flask</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
             <li>SQL</li>
             <li>Java</li>
-            <li>JavaScript</li>
-            <li>Scheme</li>
-            <li>NoSQL</li>
             <li>Flink</li>
             <li>Hadoop</li>
             <li>Kafka</li>
             <li>Airflow</li>
-            <li>Ruby on Rails</li>
-            <li>NodeJS</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
             <li>Google Cloud Engine</li>
             <li>Git</li>
-            <li>Docker</li>
-            <li>Codecov</li>
-            <li>Codefresh</li>
-            <li>Slack API</li>
+            
+            
+        </ul>
+        <br> </br>
+        <h2 class="heading"> Other Skills</h2>
+        <ul>
+        <li>Elastic Map Reduce</li>
+        <li>NoSQL</li>
+        <li>Neo4j</li>
+        <li>Redis</li>
+        <li>NodeJS</li>
+        <li>JavaScript</li>
+        <li>Scheme</li>
+        <li>Codecov</li>
+        <li>Codefresh</li>
+        <li>Slack API</li>
         </ul>
 
     </div>
