--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@ Includes detailed information about all my recent projects and interests."/>
                 <div data-date="January 2019 – Present">
                         <h3>Hudson Bay Company (HBC)</h3>
                         <h4> Data Engineer</h4>
+                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I help develop the company's data platform. 
+                            This platform is built with Apache Airflow (running on Kubernetes), Spark (running on EMR clusters), and Hive tables stored on S3. Specifically some of my tasks included
+                            developing Airflow DAGs to run pipelines, creating custom Airflow operators to launch EMR clusters with the proper dependencies, and translating old SQL jobs to SparkSQL. On the machine learning side I refined models 
+                            to forecast retail demand with Spark MLlib (later experimented with deep learning architectures in PyTorch), trained/tested models to cluster products for better product categorization with Tensorflow, and researched techniques to improve personalization.
                         <p> </p>
             
                     </div>
