add project links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Includes detailed information about all my recent projects and interests."/>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm looking for opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
                         <b> Primary Areas of Research/Specialities</b>
                         <ul>
                             <li>Transfer and multitask learning</li>
@@ -136,7 +136,6 @@ Includes detailed information about all my recent projects and interests."/>
 
                         I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year of college, to large-scale data processing with Spark and Hadoop begining in 2017, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. 
                         <br></br>
-                        From 2017-2018 I worked as a Data Analyst at Easter Maine Medical Center. I performed a variety of tasks ranging building a Python pipeline to bring together the hospital's diverse data sources, to researching RNNs for forecasting length of stay and creating interactive visualizations for physicians and administrators. Most recently, I develop data pipelines and machine learning models for Hudson Bay Company (HBC). The pipelines are generally made with a combination of Spark, Airflow, and deployed on Kubernetes. I have also aided in the development of several machine learning models using SparkML and Tensorflow to address business operations such as forecasting retail demand as well as customer personalization. 
                         </p>
 
 
@@ -154,7 +153,7 @@ Includes detailed information about all my recent projects and interests."/>
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle competitions expert. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles on Medium in Towards Data Science some of which are listed in the <a href="#writing"> writing section </a>.
+                        The majority of my projects and contributions are open-source and on GitHub. I founded and currently lead the <a href="https://isaacmg.github.io/pydata_orono/">PyData Orono Meetup group</a>. I'm also a Kaggle competitions expert, however I have not competed in a while. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Finally, I have written many articles on Medium in Towards Data Science some of which are listed in the <a href="#writing"> writing section </a>.
                         </p>
                          <br></br>
                          <p>
@@ -343,6 +342,14 @@ Includes detailed information about all my recent projects and interests."/>
           </ul>
 
       </div>
+      <div class="container" style="width:85%; background-color:white;" >
+        <h3> Presentations</h3>
+        <li> <a href="https://www.ververica.com/resources/flink-forward-san-francisco-2019/deploying-onnx-models-on-flink"> Flink Forward San Francisco 2019: ONNX meets Flink </a></li>
+        <li> <a href="https://vimeo.com/299723817"> PyData Orono: Data Visualization Night</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=gk_j6CNl_E0"> PyData Orono: Paying Attention in PyTorch</a></li>
+        
+      </div>
+
 
     </div>
 
