update awkward wording

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Includes detailed information about all my recent projects and interests."/>
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. I founded and currently lead the <a href="https://isaacmg.github.io/pydata_orono/">PyData Orono Meetup group</a>. I'm also a Kaggle competitions expert, however I have not competed in a while. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Finally, I have written many articles on Medium in Towards Data Science some of which are listed in the <a href="#writing"> writing section </a>.
+                        The majority of my projects and contributions are open-source and on GitHub. I founded and currently lead the <a href="https://isaacmg.github.io/pydata_orono/">PyData Orono Meetup group</a>. I'm also a Kaggle competitions expert, however I have not competed in several years. You can see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Finally, I have written many articles on Medium in Towards Data Science some of which are listed in the <a href="#writing"> writing section </a>.
                         </p>
                          <br></br>
                          <p>
