--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Includes detailed information about all my recent projects and interests."/>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm looking for opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning and big data technologies to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
                         <b> Primary Areas of Research/Specialities</b>
                         <ul>
                             <li>Transfer and multitask learning</li>
@@ -185,10 +185,10 @@ Includes detailed information about all my recent projects and interests."/>
                 <div data-date="January 2019 – Present">
                         <h3>Hudson Bay Company (HBC)</h3>
                         <h4> Data Engineer</h4>
-                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I help develop the company's data platform. 
+                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I helped develop the company's data platform. 
                             This platform is built with Apache Airflow (running on Kubernetes), Spark (running on EMR clusters), and Hive tables stored on S3. Specifically some of my tasks included
                             developing Airflow DAGs to run pipelines, creating custom Airflow operators to launch EMR clusters with the proper dependencies, and translating old SQL jobs to SparkSQL. On the machine learning side I refined models 
-                            to forecast retail demand with Spark MLlib (later experimented with deep learning architectures in PyTorch), trained/tested models to cluster products for better product categorization with Tensorflow, and researched techniques to improve personalization.
+                            to forecast retail demand with Spark MLlib (later experimented with deep learning architectures in PyTorch), trained/tested models to cluster products for better product categorization with Tensorflow, and researched techniques to improve personalization (also with Tensorflow).
                         <p> </p>
             
                     </div>
