small updates to format

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Includes detailed information about all my recent projects and interests."/>
                           </ul>
 
                         <br></br>
-                        <b> Background </b>
+                        <b> Background</b>
                         <br></br>
 
                         I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year of college, to large-scale data processing with Spark and Hadoop begining in 2017, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. 
@@ -185,7 +185,7 @@ Includes detailed information about all my recent projects and interests."/>
                 <div data-date="January 2019 – Present">
                         <h3>Hudson Bay Company (HBC)</h3>
                         <h4> Data Engineer</h4>
-                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I helped develop the company's data platform. 
+                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I helped develop the company's unified data platform. 
                             This platform is built with Apache Airflow (running on Kubernetes), Spark (running on EMR clusters), and Hive tables stored on S3. Specifically some of my tasks included
                             developing Airflow DAGs to run pipelines, creating custom Airflow operators to launch EMR clusters with the proper dependencies, and translating old SQL jobs to SparkSQL. On the machine learning side I refined models 
                             to forecast retail demand with Spark MLlib (later experimented with deep learning architectures in PyTorch), trained/tested models to cluster products for better product categorization with Tensorflow, and researched techniques to improve personalization (also with Tensorflow).
