--- a/index.html
+++ b/index.html
@@ -357,6 +357,25 @@ Includes detailed information about all my recent projects and interests."/>
         <h2 class="heading"> Projects</h2>
         <div class="container">
             <div class="row">
+		    <div class="project shadow-large">
+			    <div class="project-image">
+                        <img src="https://cnet3.cbsistatic.com/img/QTocY2Ro4mlPnTzOVwHQ-ekWfJQ=/1092x0/2014/04/21/e49e17f7-0397-4773-882f-5d060b6b4595/westerosmap.jpg" height=300px width=350px />
+                    </div>
+
+		    <div class="project-info">
+                        <h3> <b> Game of Thrones chatbot </b></h3>
+                        <p>
+                            I developed a Game of Thrones chatbot from scratch using Flask, Redis, ElasticSearch, PostgreSQL, Spacy, and Tensorflow.
+                        </p>
+                        <a href="https://towardsdatascience.com/building-a-chatbot-for-slack-from-scratch-part-1-understanding-language">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                </div>
+                  <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://isaacmg.github.io/images/granb.PNG" height=280px width=350px />
+                    </div>
                     
                         
                         <div class="project shadow-large">
