--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@ Includes detailed information about all my recent projects and interests."/>
 		    <div class="project-info">
                         <h3> <b> Game of Thrones chatbot </b></h3>
                         <p>
-                            I developed a Game of Thrones chatbot from scratch using Flask, Redis, ElasticSearch, PostgreSQL, Spacy, and Tensorflow.
+                            I developed a Game of Thrones chatbot from scratch using Flask, Redis, ElasticSearch, PostgreSQL, Spacy, and Tensorflow. The bot operated through a Flask based REST-API where incoming user messages (from the Slack-API) were combined with prior cached messages in Redis and fed to a combination of rule-based NLP methods and Tensorflow models. 
+                            These in turn constructed queries to the appropiate data sources (ElasticSearch or PostgreSQL) and then synthesized a response based 
+                            on the returned information. Full conversation history for the bot was stored in PostgreSQL and periodically analyzed and reintegrated into the training data to improve performance.  This app ran primarily on AWS (ElasticSearch service, ECS, and EC2), while a few of the Tensorflow components ran on GCP instances. Bot fully integrated with the Slack-API including providing custom formatting for messages and utilizing OAuth.. 
                         </p>
                         <a href="https://towardsdatascience.com/building-a-chatbot-for-slack-from-scratch-part-1-understanding-language-1f085b2eda6c">View Project</a>
                     </div>
