--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ Includes detailed information about all my recent projects and interests."/>
                         <b> DO NOT contact me about ANY data engineering positions! </b>
                          I'm NOT interested in roles that focus on building pipelines or supporting data science teams. The same goes for low level analytics roles that primarily just revolve around writing SQL queries. 
                         </p>
-                        <b> Primary Areas of Research/Specialities</b>
+                        <br> </br>
+                        <b> Primary Areas of Research/Specialties</b>
                         <ul>
                             <li> Transfer and multitask learning</li>
                             <li> Natural Language Processing </li>
