add update skils and other

--- a/index.html
+++ b/index.html
@@ -192,10 +192,18 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="September 2019 – Present">
+                <h3> Monster.com</h3>
+                <h4> Data and Machine Learning Engineer</h4>
+                <p>
+                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. 
+                </p>
+    
+            </div>
                 <div data-date="January 2019 – May 2019">
                         <h3>Hudson Bay Company (Contract)</h3>
                         <h4> Data Engineer</h4>
-                        <p> My role has involved a mix of data engineering and machine learning tasks. On the data engineering side I helped develop the company's unified data platform. 
+                        <p> My role involved a mix of data engineering and machine learning tasks. On the data engineering side I helped develop the company's unified data platform. 
                             This platform is built with Apache Airflow (running on Kubernetes), Spark (running on EMR clusters), and Hive tables stored on S3. Specifically some of my tasks included
                             developing Airflow DAGs to run pipelines, creating custom Airflow operators to launch EMR clusters with the proper dependencies, and translating old SQL jobs to SparkSQL. On the machine learning side I refined models 
                             to forecast retail demand with Spark MLlib (later experimented with deep learning architectures in PyTorch), trained/tested models to cluster products for better product categorization with Tensorflow, and researched techniques to improve personalization (also with Tensorflow).
@@ -371,6 +379,16 @@ Includes detailed information about all my recent projects and interests."/>
 			    <div class="project-image">
                         <img src="https://cnet3.cbsistatic.com/img/QTocY2Ro4mlPnTzOVwHQ-ekWfJQ=/1092x0/2014/04/21/e49e17f7-0397-4773-882f-5d060b6b4595/westerosmap.jpg" height=300px width=350px />
                     </div>
+            <div class="project-info">
+                        <h3> <b> CoronaWhy Research</b></h3>
+                        <p>
+
+                        </p>
+                        <a href="">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                </div>
 
 		    <div class="project-info">
                         <h3> <b> Game of Thrones chatbot </b></h3>
@@ -489,18 +507,17 @@ Includes detailed information about all my recent projects and interests."/>
             <li>Python</li>
             <li>PyTorch</li>
             <li>Pandas</li>
+            <li>Tensorflow</li>
             <li>Keras</li>
             <li>Bokeh</li>
             <li>NumPy</li>
+            <li>Jupyter</li>
             <li>Flask</li>
             <li>Docker</li>
             <li>Kubernetes</li>
             <li>SQL</li>
             <li>Java</li>
             <li>Flink</li>
-            <li>Hadoop</li>
-            <li>Kafka</li>
-            <li>Airflow</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
             <li>Google Cloud Engine</li>
@@ -511,7 +528,10 @@ Includes detailed information about all my recent projects and interests."/>
         <br> </br>
         <h2 class="heading"> Other Skills</h2>
         <ul>
+        <li>Airflow</li>
         <li>Elastic Map Reduce (EMR)</li>
+        <li>Hadoop</li>
+        <li>Kafka</li>
         <li>NoSQL</li>
         <li>Neo4j</li>
         <li>Redis</li>
