--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Includes detailed information about all my recent projects and interests."/>
                     <p>
                         
 
-                        I'm open to opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning (particularly deep learning) to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm open to opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning (especially deep learning) to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
                         <p>
                         <b> DO NOT contact me about ANY data engineering positions! </b>
                          I'm NOT interested in roles that focus on building pipelines or supporting data science teams. The same goes for low level analytics roles that primarily just revolve around writing SQL queries. 
@@ -196,7 +196,8 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> Monster.com</h3>
                 <h4> Data and Machine Learning Engineer</h4>
                 <p>
-                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. 
+                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
+                 Additionally, part of my time goes to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery :( 
                 </p>
     
             </div>
@@ -362,6 +363,7 @@ Includes detailed information about all my recent projects and interests."/>
       </div>
       <div class="container" style="width:85%; background-color:white;" >
         <h3> Presentations</h3>
+        <li> <a href="https://www.youtube.com/watch?v=DsUgRyuJGyE"> Boston Data Science Meetup: Reproducibility and extendbility best practices </a></li>
         <li> <a href="https://www.ververica.com/resources/flink-forward-san-francisco-2019/deploying-onnx-models-on-flink"> Flink Forward San Francisco 2019: ONNX meets Flink </a></li>
         <li> <a href="https://vimeo.com/299723817"> PyData Orono: Data Visualization Night</a> </li>
         <li> <a href="https://www.youtube.com/watch?v=gk_j6CNl_E0"> PyData Orono: Paying Attention in PyTorch</a></li>
@@ -379,17 +381,6 @@ Includes detailed information about all my recent projects and interests."/>
 			    <div class="project-image">
                         <img src="https://cnet3.cbsistatic.com/img/QTocY2Ro4mlPnTzOVwHQ-ekWfJQ=/1092x0/2014/04/21/e49e17f7-0397-4773-882f-5d060b6b4595/westerosmap.jpg" height=300px width=350px />
                     </div>
-            <div class="project-info">
-                        <h3> <b> CoronaWhy Research</b></h3>
-                        <p>
-
-                        </p>
-                        <a href="">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                </div>
-
 		    <div class="project-info">
                         <h3> <b> Game of Thrones chatbot </b></h3>
                         <p>
