update copyright plus others

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> Monster.com</h3>
                 <h4> Data and Machine Learning Engineer</h4>
                 <p>
-                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
-                 Additionally, part of my time goes to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery :( 
+                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
+                 Additionally, part of my time goes to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery
                 </p>
     
             </div>
@@ -557,7 +557,7 @@ Includes detailed information about all my recent projects and interests."/>
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 Isaac McKillen-Godfried
+                        Copyright &copy; 2019 Isaac McKillen-Godfried
                     </p>
                 </div>
                 <div class="col-sm-2 top">
