--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> Monster.com</h3>
                 <h4> Data and Machine Learning Engineer</h4>
                 <p>
-                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
+                 I develop and fine-tune PyTorch models (specifically variations of the transformer) to add new triplets to the company knowledge graph in order to enhance downstream applications such as search, job recommendation, and autocompletion. I also help educate and set standards regarding writing PyTorch models, Python code quality, and data science best practices. 
                  Additionally, part of my time goes to building out the company data lake on GCP with tools like Terraform, Cloud Functions, Dataflow, and BigQuery
                 </p>
     
