--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Includes detailed information about all my recent projects and interests."/>
                         I'm open to opportunites in the areas of Machine Learning and Data Science. In particular, I'm interested in using machine learning (especially deep learning) to solve real world problems. I have created this site as my expanded portfolio where I describe my previous work in detail. If you want just the highlights please download my resume above. <br></br>
                         <p>
                         <b> DO NOT contact me about ANY data engineering positions! </b>
-                         I'm NOT interested in roles that focus on building pipelines or supporting data science teams. The same goes for low level analytics roles that primarily just revolve around writing SQL queries. 
+                         I'm NOT interested in roles that focus on building pipelines or supporting data science teams. The same goes for low level analytics roles that primarily just revolve around writing SQL queries or dashboards. 
                         </p>
                         <br> </br>
                         <b> Primary Areas of Research/Specialties</b>
