--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Includes detailed information about all my recent projects and interests."/>
                 <h3> CoronaWhy</h3>
                 <h4> Lead Machine Learning Researcher</h4>
                 <p>
-                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including extracting adverse drug events, clustering COVID-19 literature, and forecasting COVID-19 spread. I'm currently leading a team to of data scientists, data engineers, and epidemologists to create models to forecast COVID-19 spread and develop casual models to gauge policy impacts.
+                 When Coronavirus struck I started volunteering at CoronaWhy. At CoronaWhy I've worked on several projects including extracting adverse drug events, clustering COVID-19 literature, and forecasting COVID-19 spread. I'm currently leading a team of data scientists, data engineers, and epidemiologists to create models to forecast COVID-19 spread and develop casual models to gauge policy impacts.
                 </p>
     
             </div>
@@ -561,7 +561,9 @@ Includes detailed information about all my recent projects and interests."/>
         <li>Scheme</li>
         <li>Codecov</li>
         <li>Codefresh</li>
+	<li>Terraform</li>
         <li>Slack API</li>
+		
         </ul>
 
     </div>
