--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-		<div data-date="March 2020 – Present0">
+		<div data-date="March 2020 – Present">
                 <h3> CoronaWhy</h3>
                 <h4> Lead Machine Learning Researcher</h4>
                 <p>
