--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@ Includes detailed information about all my recent projects and interests."/>
                     <div class="project-info">
                         <h3> <b> Flow Forecast Repository</b></h3>
                         <p>
-                            Initially, begun as a repository to forecast flash floods, stream flows, and large precipitation events
+                            Initially, a repository to forecast flash floods and stream flows, flow evolved to serve as a general time series forecasting libray. We are currently using flow forecast to forecast COVID cases around the U.S. as well as study transfer learning training on flow, wind, and solar data.
                         </p>
-                        <a href="https://github.com/isaacmg?org=CoronaWhy&year_list=1">View Project</a>
+                        <a href="https://github.com/AIStream-Peelout>View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
